# deep_into_cupti

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/: README.md  activity_kernel.cpp  activity_kernel.cu  activity_kernel_ctx.cpp  callback_subscriber.cpp  correlationId.cpp  main.cu
kernel/: CMakeLists.txt  kernel.cu  kernel.h
src/: kernel.cu
utils/: CMakeLists.txt  spdlog_utils.cpp  spdlog_utils.h  utils.h
